--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -30,7 +30,7 @@ dock_5="Inspector,Node,History"
 
 open_scenes=PackedStringArray("res://main.tscn")
 current_scene="res://main.tscn"
-center_split_offset=0
+center_split_offset=-489
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
 selected_bottom_panel_item=13
@@ -52,7 +52,7 @@ zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(852, 436, 1399, 740)
+floating_window_rect=Rect2i(852, 496, 1398, 740)
 floating_window_screen=0
 
 [ShaderEditor]
