--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://")
+dock_filesystem_selected_paths=PackedStringArray("res://player.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -19,7 +19,7 @@ dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=270
+dock_hsplit_2=187
 dock_hsplit_3=-270
 dock_hsplit_4=0
 dock_3="Scene,Import"
@@ -32,7 +32,8 @@ open_scenes=PackedStringArray("res://main.tscn")
 current_scene="res://main.tscn"
 center_split_offset=-489
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [EditorWindow]
 
@@ -42,8 +43,8 @@ position=Vector2i(0, 0)
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
+open_scripts=["res://player.gd"]
+selected_script="res://player.gd"
 open_help=[]
 script_split_offset=400
 list_split_offset=0
@@ -52,7 +53,7 @@ zoom_factor=1.0
 [GameView]
 
 <<<<<<<HEADfloating_window_rect=Rect2i(852, 496, 1398, 740)
-floating_window_rect=Rect2i(852, 496, 1398, 740)
+floating_window_rect=Rect2i(852, 496, 1399, 740)
 floating_window_screen=0
 
 [ShaderEditor]
