--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -10,7 +10,7 @@ dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 <<<<<<<HEADdock_filesystem_selected_paths=PackedStringArray("res://dirt-5.png.png")
-dock_filesystem_selected_paths=PackedStringArray("res://dirt-4.png.png")
+dock_filesystem_selected_paths=PackedStringArray("res://stone-1.png.png")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -34,7 +34,7 @@ current_scene="res://main.tscn"
 center_split_offset=-856
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_bottom_panel_item=13
 
 [EditorWindow]
 
