--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -33,7 +33,7 @@ open_scenes=PackedStringArray("res://main.tscn")
 current_scene="res://main.tscn"
 center_split_offset=-489
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [EditorWindow]
@@ -44,8 +44,8 @@ position=Vector2i(0, 0)
 
 [ScriptEditor]
 
-open_scripts=["res://player.gd"]
-selected_script="res://player.gd"
+open_scripts=["res://area_2d.gd", "res://player.gd"]
+selected_script="res://area_2d.gd"
 open_help=[]
 script_split_offset=400
 list_split_offset=0
