--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -10,7 +10,7 @@ dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 <<<<<<<HEADdock_filesystem_selected_paths=PackedStringArray("res://dirt-5.png.png")
-dock_filesystem_selected_paths=PackedStringArray("res://clay.png")
+dock_filesystem_selected_paths=PackedStringArray("res://portal-frames-1.png.png")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -20,7 +20,7 @@ dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=187
+dock_hsplit_2=270
 dock_hsplit_3=-270
 dock_hsplit_4=0
 dock_3="Scene,Import"
@@ -31,10 +31,10 @@ dock_5="Inspector,Node,History"
 
 open_scenes=PackedStringArray("res://main.tscn")
 current_scene="res://main.tscn"
-center_split_offset=-489
-selected_default_debugger_tab_idx=0
+center_split_offset=-856
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_bottom_panel_item=9
 
 [EditorWindow]
 
@@ -44,8 +44,8 @@ position=Vector2i(0, 0)
 
 [ScriptEditor]
 
-open_scripts=["res://area_2d.gd", "res://player.gd"]
-selected_script="res://area_2d.gd"
+open_scripts=["res://player.gd"]
+selected_script="res://player.gd"
 open_help=[]
 script_split_offset=400
 list_split_offset=0
@@ -62,3 +62,13 @@ open_shaders=[]
 split_offset=400
 selected_shader=""
 text_shader_zoom_factor=1.0
+
+[editor_log]
+
+log_filter_0=true
+log_filter_2=true
+log_filter_1=true
+log_filter_3=true
+log_filter_4=true
+collapse=false
+show_search=true
