grapple based on time

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -20,7 +20,7 @@ dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=187
+dock_hsplit_2=176
 dock_hsplit_3=-270
 dock_hsplit_4=0
 dock_3="Scene,Import"
@@ -33,7 +33,7 @@ open_scenes=PackedStringArray("res://main.tscn")
 current_scene="res://main.tscn"
 center_split_offset=-489
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [EditorWindow]
@@ -45,7 +45,7 @@ position=Vector2i(0, 0)
 [ScriptEditor]
 
 open_scripts=["res://area_2d.gd", "res://player.gd"]
-selected_script="res://area_2d.gd"
+selected_script="res://player.gd"
 open_help=[]
 script_split_offset=400
 list_split_offset=0
