--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -21,3 +21,7 @@ create_new_node=Rect2(540, 200, 1800, 1400)
 
 last_selected_language="GDScript"
 create_built_in_script=false
+
+[quick_open_dialog]
+
+last_mode=0
