--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -20,7 +20,7 @@ dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=176
+dock_hsplit_2=300
 dock_hsplit_3=-270
 dock_hsplit_4=0
 dock_3="Scene,Import"
@@ -44,8 +44,8 @@ position=Vector2i(0, 0)
 
 [ScriptEditor]
 
-open_scripts=["res://area_2d.gd", "res://player.gd"]
-selected_script="res://player.gd"
+open_scripts=["res://animated_sprite_2d.gd", "res://area_2d.gd", "res://player.gd"]
+selected_script="res://animated_sprite_2d.gd"
 open_help=[]
 script_split_offset=400
 list_split_offset=0
@@ -53,7 +53,7 @@ zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(852, 496, 1399, 740)
+floating_window_rect=Rect2i(852, 496, 1231, 740)
 floating_window_screen=0
 
 [ShaderEditor]
