--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -10,7 +10,7 @@ dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 <<<<<<<HEADdock_filesystem_selected_paths=PackedStringArray("res://dirt-5.png.png")
-dock_filesystem_selected_paths=PackedStringArray("res://grass-1.png.png")
+dock_filesystem_selected_paths=PackedStringArray("res://global.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -32,9 +32,9 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://main.tscn")
 current_scene="res://main.tscn"
 center_split_offset=-856
-selected_default_debugger_tab_idx=1
-selected_main_editor_idx=0
-selected_bottom_panel_item=13
+selected_default_debugger_tab_idx=0
+selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [EditorWindow]
 
@@ -44,16 +44,16 @@ position=Vector2i(0, 0)
 
 [ScriptEditor]
 
-open_scripts=["res://player.gd"]
+open_scripts=["res://area_2d.gd", "res://global.gd", "res://player.gd"]
 selected_script="res://player.gd"
 open_help=[]
 script_split_offset=400
 list_split_offset=0
-zoom_factor=1.0
+zoom_factor=0.90347505
 
 [GameView]
 
-floating_window_rect=Rect2i(850, 494, 1398, 740)
+floating_window_rect=Rect2i(852, 496, 1399, 740)
 floating_window_screen=0
 
 [ShaderEditor]
