im so freaking done

--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -6,3 +6,8 @@ select_mode=0
 
 executable_path="/Users/265524jofl/Desktop/Godot.app/Contents/MacOS/Godot"
 <<<<<<<Updatedupstreamuse_advanced_connections=false
+
+[export_options]
+
+default_filename="index"
+export_debug=true
