--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -45,7 +45,7 @@ position=Vector2i(0, 0)
 [ScriptEditor]
 
 open_scripts=["res://animated_sprite_2d.gd", "res://area_2d.gd", "res://global.gd", "res://player.gd", "res://respawn_area.gd"]
-selected_script="res://player.gd"
+selected_script="res://animated_sprite_2d.gd"
 open_help=[]
 script_split_offset=400
 list_split_offset=0
